--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ansi-colors": "^4.1.3",
     "axios": "^0.27.2",
     "cli-progress": "^3.11.2",
-    "prompt-sync": "^4.2.0",
-    "pkg": "^5.5.2"
+    "fs-extra": "^11.1.0",
+    "pkg": "^5.5.2",
+    "prompt-sync": "^4.2.0"
   }
 }
